hledger/test/errors/csvamountonenonzero.csv.rules
skip 2
date %1
amount-in %2
amount-out %3
